--- a/index3.html
+++ b/index3.html
@@ -64,11 +64,6 @@
 <p>Display the colours used in a PNG image.</p>
 </div>
 <div>
-<h3><a href="https://github.com/arp242/db-bench">db-bench</a></h3>
-<code><a href='https://godocs.io/zgo.at/db-bench'>godoc</a></code>
-<p>.</p>
-</div>
-<div>
 <h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
 <code><a href='https://godocs.io/zgo.at/goatcounter/v2'>godoc</a></code>
 <p>.</p>
@@ -97,6 +92,11 @@
 <h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
 <code><a href='https://godocs.io/zgo.at/singlepage'>godoc</a></code>
 <p>Bundle external assets in a HTML file to distribute a stand-alone HTML document.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/sqlbench">sqlbench</a></h3>
+<code><a href='https://godocs.io/zgo.at/sqlbench'>godoc</a></code>
+<p>.</p>
 </div>
 <div>
 <h3><a href="https://github.com/arp242/zcert">zcert</a></h3>
