--- a/index.html
+++ b/index.html
@@ -32,136 +32,205 @@
 	<h1>zGoat</h1>
 
 	<div class="page">
-		<p>zGoat is the organisation under which I develop GoatCounter and various other related
-		packages. Many of the projects listed here were developed for use in GoatCounter.</p>
-
-		<p>Everything here is written in Go and is released under the MIT license, with the
-		exception of GoatCounter itself which is EUPL.</p>
+		<p>zgo.at contains my Go packages.</p>
 
 		<p class="intro-links">
-			<a href="https://github.com/zgoat">GitHub</a>
-			<a href="https://www.goatcounter.com/contribute">Support my work</a>
+			<a href="https://github.com/arp242">github.com/arp242</a>
 			<a href="https://www.arp242.net">arp242.net</a>
 		</p>
 	</div>
 	<hr>
-	<section class="page">
-		<h2>Applications</h2>
-		<div>
-			<h3><a href="https://www.goatcounter.com">GoatCounter</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/goatcounter'>godoc</a></code>
-			<p>Open source and privacy-friendly web analytics.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/httpbuf">httpbuf</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/httpbuf'>godoc</a></code>
-			<p>Buffer HTTP requests when a backend is down.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/zsrv">zsrv</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zsrv'>godoc</a></code>
-			<p>Static webserver with all assets compiled in, so you just need to deploy a binary to
-			serve your site.</p>
-		</div>
-		<!--
-		<div>
-			<h3><a href="https://github.com/zgoat/zcert">zcert</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zcert'>godoc</a></code>
-			<p></p>
-		</div>
-		-->
-	</section>
-	<hr>
-	<section class="page">
-		<h2>Libraries</h2>
-		<div>
-			<h3><a href="https://github.com/zgoat/zcache">zcache</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zcache'>godoc</a></code>
-			<p>In-memory key:value store/cache with time-based evictions.</p>
-		</div>
-
-		<div>
-			<h3><a href="https://github.com/zgoat/follow">follow</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/follow'>godoc</a></code>
-			<p>Follow a file for changes; e.g. "tail -f".</p>
-		</div>
-
-		<div>
-			<h3><a href="https://github.com/zgoat/blackmail">blackmail</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/blackmail'>godoc</a></code>
-			<p>Send emails with a friendly API.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/gadget">gadget</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/gadget'>godoc</a></code>
-			<p>Parse the <code>User-Agent</code> header.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/isbot">isbot</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/isbot'>godoc</a></code>
-			<p>Detect web bots.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/zstd">zstd</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zstd'>godoc</a></code>
-			<p>Extensions to the Go stdlib.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/zdb">zdb</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zdb'>godoc</a></code>
-			<p>Database helpers built on top of sqlx.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/zvalidate">zvalidate</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zvalidate'>godoc</a></code>
-			<p>Validation of parameters; returns parsed values so they can be used.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/guru">guru</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/guru'>godoc</a></code>
-			<p>Add an error code to errors.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/errors">errors</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/errors'>godoc</a></code>
-			<p>Add errors.Wrap() and a stack trace.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/zpack">zpack</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zpack'>godoc</a></code>
-			<p>Pack static files in a binary.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/zstripe">zstripe</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zstripe'>godoc</a></code>
-			<p>Stripe API helpers.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/tz">tz</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/tz'>godoc</a></code>
-			<p>Friendly timezone API.</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/zli">zli</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zli'>godoc</a></code>
-			<p>Some common functions for writing CLI programs.</p>
-		</div>
-	</section>
-	<hr>
-	<section class="page">
-		<h2>Unfinished</h2>
-		<div>
-			<h3><a href="https://github.com/zgoat/zhttp">zhttp</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zhttp'>godoc</a></code>
-			<p>HTTP toolkit</p>
-		</div>
-		<div>
-			<h3><a href="https://github.com/zgoat/zlog">zlog</a></h3>
-			<code><a href='https://pkg.go.dev/zgo.at/zlog'>godoc</a></code>
-			<p>Logging library.</p>
-		</div>
-	</section>
-	<br>
+<section class="page">
+<h2>Applications</h2>
+<div>
+<h3><a href="https://github.com/arp242/border">border</a></h3>
+<code><a href='https://godocs.io/zgo.at/border'>godoc</a></code>
+<p>Simple commandline tool to add a border around PNG images.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/cantuse">cantuse</a></h3>
+<code><a href='https://godocs.io/zgo.at/cantuse'>godoc</a></code>
+<p>List browsers in which a feature *won't* work.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/colorcount">colorcount</a></h3>
+<code><a href='https://godocs.io/zgo.at/colorcount'>godoc</a></code>
+<p>Display the colours used in a PNG image.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/goatcounter">goatcounter</a></h3>
+<code><a href='https://godocs.io/zgo.at/goatcounter/v2'>godoc</a></code>
+<p>Easy web analytics. No tracking of personal data.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/goimport">goimport</a></h3>
+<code><a href='https://godocs.io/zgo.at/goimport'>godoc</a></code>
+<p>Add, remove, or replace imports in Go files.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/gomodgraph">gomodgraph</a></h3>
+<code><a href='https://godocs.io/zgo.at/gomodgraph'>godoc</a></code>
+<p>Go mod graph as a nicely indented graph.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/gosodoff">gosodoff</a></h3>
+<code><a href='https://godocs.io/zgo.at/gosodoff'>godoc</a></code>
+<p>Generate return statements in Go code.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/har">har</a></h3>
+<code><a href='https://godocs.io/zgo.at/har'>godoc</a></code>
+<p>Read HAR ("HTTP Archive format") files.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/singlepage">singlepage</a></h3>
+<code><a href='https://godocs.io/zgo.at/singlepage'>godoc</a></code>
+<p>Bundle external assets in a HTML file to distribute a stand-alone HTML document.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/sqlbench">sqlbench</a></h3>
+<code><a href='https://godocs.io/zgo.at/sqlbench'>godoc</a></code>
+<p>Run benchmarks on an SQL database.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/uni">uni</a></h3>
+<code><a href='https://godocs.io/zgo.at/uni/v2'>godoc</a></code>
+<p>Query the Unicode database from the commandline, with good support for emojis.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zcert">zcert</a></h3>
+<code><a href='https://godocs.io/zgo.at/zcert'>godoc</a></code>
+<p></p>
+</div>
+</section>
+<section class="page">
+<h2>Libraries</h2>
+<div>
+<h3><a href="https://github.com/arp242/acidtab">zgo.at/acidtab</a></h3>
+<code><a href='https://godocs.io/zgo.at/acidtab'>godoc</a></code>
+<p>Print nicely aligned tables in the terminal.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/blackmail">zgo.at/blackmail</a></h3>
+<code><a href='https://godocs.io/zgo.at/blackmail'>godoc</a></code>
+<p>Send emails with a friendly API.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/errors">zgo.at/errors</a></h3>
+<code><a href='https://godocs.io/zgo.at/errors'>godoc</a></code>
+<p>Yet another errors package.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/follow">zgo.at/follow</a></h3>
+<code><a href='https://godocs.io/zgo.at/follow'>godoc</a></code>
+<p>Follow a file for changes; e.g. "tail -F".</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/gadget">zgo.at/gadget</a></h3>
+<code><a href='https://godocs.io/zgo.at/gadget'>godoc</a></code>
+<p>Get the browser and OS from the User-Agent header.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/guru">zgo.at/guru</a></h3>
+<code><a href='https://godocs.io/zgo.at/guru'>godoc</a></code>
+<p>Go errors with a Guru Meditation Number.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/hubhub">zgo.at/hubhub</a></h3>
+<code><a href='https://godocs.io/zgo.at/hubhub'>godoc</a></code>
+<p>Set of utility functions for working with the GitHub API.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/isbot">zgo.at/isbot</a></h3>
+<code><a href='https://godocs.io/zgo.at/isbot'>godoc</a></code>
+<p>Detect HTTP bots.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/json">zgo.at/json</a></h3>
+<code><a href='https://godocs.io/zgo.at/json'>godoc</a></code>
+<p>Encoding/json with patches.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/ps">zgo.at/ps</a></h3>
+<code><a href='https://godocs.io/zgo.at/ps'>godoc</a></code>
+<p>List system processes.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/sconfig">zgo.at/sconfig</a></h3>
+<code><a href='https://godocs.io/zgo.at/sconfig'>godoc</a></code>
+<p>A simple and functional configuration file parser.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/termfo">zgo.at/termfo</a></h3>
+<code><a href='https://godocs.io/zgo.at/termfo'>godoc</a></code>
+<p>A terminfo library.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/termtext">zgo.at/termtext</a></h3>
+<code><a href='https://godocs.io/zgo.at/termtext'>godoc</a></code>
+<p>Termtext is a Go package to deal with monospace text as interpreted by terminals.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/tz">zgo.at/tz</a></h3>
+<code><a href='https://godocs.io/zgo.at/tz'>godoc</a></code>
+<p>Go timezone convience library.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/z18n">zgo.at/z18n</a></h3>
+<code><a href='https://godocs.io/zgo.at/z18n'>godoc</a></code>
+<p>I18n library.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zcache">zgo.at/zcache</a></h3>
+<code><a href='https://godocs.io/zgo.at/zcache/v2'>godoc</a></code>
+<p>An in-memory key:value store/cache (similar to Memcached) library for Go, suitable for single-machine applications.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zdb">zgo.at/zdb</a></h3>
+<code><a href='https://godocs.io/zgo.at/zdb'>godoc</a></code>
+<p>Zdb provides a nice API to interact with SQL databases.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zhttp">zgo.at/zhttp</a></h3>
+<code><a href='https://godocs.io/zgo.at/zhttp'>godoc</a></code>
+<p>Martin's HTTP package.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zli">zgo.at/zli</a></h3>
+<code><a href='https://godocs.io/zgo.at/zli'>godoc</a></code>
+<p>A Go library for writing CLI programs. It includes flag parsing, colour escape codes, and various helpful utility functions, and makes testing fairly easy.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zlog">zgo.at/zlog</a></h3>
+<code><a href='https://godocs.io/zgo.at/zlog'>godoc</a></code>
+<p>Go logging library.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zprof">zgo.at/zprof</a></h3>
+<code><a href='https://godocs.io/zgo.at/zprof'>godoc</a></code>
+<p>Display runtime profiling data for Go programs over HTTP.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zstd">zgo.at/zstd</a></h3>
+<code><a href='https://godocs.io/zgo.at/zstd'>godoc</a></code>
+<p>Extensions to Go's stdlib.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zstripe">zgo.at/zstripe</a></h3>
+<code><a href='https://godocs.io/zgo.at/zstripe'>godoc</a></code>
+<p>Set of utility functions for working with the Stripe API.</p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/ztpl">zgo.at/ztpl</a></h3>
+<code><a href='https://godocs.io/zgo.at/ztpl'>godoc</a></code>
+<p></p>
+</div>
+<div>
+<h3><a href="https://github.com/arp242/zvalidate">zgo.at/zvalidate</a></h3>
+<code><a href='https://godocs.io/zgo.at/zvalidate'>godoc</a></code>
+<p>Static validation for Go that returns parsed values .</p>
+</div>
+</section>
 	<script data-goatcounter="https://zgoat.goatcounter.com/count"
 			async src="//gc.zgo.at/count.js"></script>
 </body>
